PWA integrations and fixes
Added support for media controls (pausing audio over notification popup now actually works, and other buttons)
Added FlagPlayer as share target if installed as PWA, allowing to sharing YouTube links to open them in FlagPlayer
Added icon to playlist item to indicate it is a playlist

Changed API requests to YouTube to only contain the minimal data
Greatly improved performance of large lists by removing unique content when not visible
	- This means searching the page will not search the playlist anymore, will have to be replaced by custom search

Various minor PWA fixes
Fixed comment channel navigation generating garbage navigation states

--- a/style.css
+++ b/style.css
@@ -695,6 +695,10 @@ a, a:visited, a:hover, a:active {
 	width: 96px;
 	height: 54px;
 }
+.playlist .liThumbnailImg {
+	width: 96px;
+	height: 54px;
+}
 .playlist .liIndex {
 	line-height: 54px;
 }
